# sam-sample

./: .gitignore  README.md  hello.py  pyproject.toml  template.yaml
.aws-sam/pipeline/: pipelineconfig.toml
.github/workflows/: pipeline-delete-dev.yaml  pipeline-deploy-dev.yaml  pipeline-deploy-prod.yaml  pipeline-dev-delete.yaml  pipeline-dev-deploy.yaml  pull-request.yaml
layer/: requirements.txt
samconfig/: samconfig-dev.toml  samconfig-prod.toml
src/: app.py
statemachines/: workflow.asl.yaml
tests/: test_lambda_handler.py
