[project]
name = "sam-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandera>=0.27.0",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools>=3.23.0",
    "aws-xray-sdk>=2.15.0",
    "awswrangler>=3.14.0",
    "boto3>=1.41.5",
    "moto>=5.1.17",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
]

# poetryでinstallする際にエラーが発生するため追加
[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.ruff.lint]
ignore = ["E402"]
